--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,16 +1,8 @@
 /* --------------------------------------------------------------
-                       _ _         
-                      (_) |        
-  __ _ _ __ __ ___   ___| |_ _   _ 
- / _` | '__/ _` \ \ / / | __| | | |
-| (_| | | | (_| |\ V /| | |_| |_| |
- \__, |_|  \__,_| \_/ |_|\__|\__, |
-  __/ |                       __/ |
- |___/                       |___/ 
 
-
-Gravityframework.com
-Version 1.2 
+Built with Gravity
+http://Gravityframework.com
+Version 1.3 
 Developed by: Owain Lewis
 License: MIT
 http://www.opensource.org/licenses/mit-license.php
@@ -101,6 +93,10 @@ label, input[type="button"], input[type="submit"], input[type="image"], button {
 button, input, select, textarea {
   margin: 0; }
 
+/* Custom Mixins. You can delare your own mixins here. */
+/* Add rounded corners to all sides */
+/* Add rounded corners to certain sides */
+/* This is a particularly useful mixin if you want to add slick CSS3 animations to elements */
 /* --------------------------------------------------------------
 
 TABLES
@@ -149,22 +145,23 @@ HEADINGS
 -------------------------------------------------------------- */
 h1, h2, h3, h4, h5 {
   font-weight: bold;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  color: #333333; }
 
 h1 {
-  font-size: 29.4px; }
+  font-size: 22px; }
 
 h2 {
-  font-size: 26.6px; }
+  font-size: 20px; }
 
 h3 {
-  font-size: 23.8px; }
+  font-size: 18px; }
 
 h4 {
-  font-size: 19.6px; }
+  font-size: 16px; }
 
 h5 {
-  font-size: 16.8px; }
+  font-size: 14px; }
 
 /* --------------------------------------------------------------
 
@@ -448,21 +445,18 @@ input[type="checkbox"] {
   input[type="checkbox"] {
     vertical-align: baseline;
     top: 2px; } }
-
 /* iPhone 3 */
 @media (-webkit-min-device-pixel-ratio: 1) and (max-device-width: 480px) {
   input[type="radio"],
   input[type="checkbox"] {
     vertical-align: baseline;
     top: 0; } }
-
 /* iPhone 4 */
 @media (-webkit-min-device-pixel-ratio: 2) and (max-device-width: 480px) {
   input[type="radio"],
   input[type="checkbox"] {
     vertical-align: baseline;
     top: 0; } }
-
 textarea,
 select,
 input[type="date"],
@@ -558,7 +552,6 @@ textarea:-moz-placeholder {
   ::-webkit-validation-bubble-top-outer-arrow,
   ::-webkit-validation-bubble-top-inner-arrow {
     display: none; } }
-
 optgroup {
   color: #000;
   font-style: normal;
