--- a/stylesheets/lib/_settings.scss
+++ b/stylesheets/lib/_settings.scss
@@ -2,8 +2,10 @@
 
 Built with Gravity
 http://Gravityframework.com
+If you love gravity, be sure to tell others about it
 Version 1.3 
 Developed by: Owain Lewis
+www.owainlewis.com
 License: MIT
 http://www.opensource.org/licenses/mit-license.php
 
@@ -18,7 +20,7 @@ $baseline: 20px;
 
 //Fonts
 
-$sans: "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$sans: Helvetica, Arial, sans-serif;
 $serif: 'Bookman Old Style',Bookman,'URW Bookman L','Palatino Linotype',serif;
 $mono: "Lucida Console", "Andale Mono", "monotype.com", "Bitstream Vera Sans Mono", monospace;
 
