--- a/stylesheets/lib/_elements.scss
+++ b/stylesheets/lib/_elements.scss
@@ -5,10 +5,10 @@ PAGE ELEMENTS
 -------------------------------------------------------------- */
 
 p {
-	margin-bottom: $baseline/2;
+	margin-bottom: $baseline;
 }
 ul, ol {
-	margin-bottom: $baseline/2;
+	margin-bottom: $baseline;
 }
 ul {
 	list-style: none;
@@ -23,7 +23,7 @@ li {
 ul li ul {
 	margin-left: $baseline;
 	margin-top: $baseline/2;
-	margin-bottom: $baseline/2;;
+	margin-bottom: $baseline/2;
 }
 
 dl {
@@ -84,6 +84,7 @@ tt {
 q {
 	font-style: italic;
 	font-weight: bold;
+	font-family:$serif;
 }
 cite {
 	display: block;
