--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,8 +2,10 @@
 
 Built with Gravity
 http://Gravityframework.com
+If you love gravity, be sure to tell others about it
 Version 1.3 
 Developed by: Owain Lewis
+www.owainlewis.com
 License: MIT
 http://www.opensource.org/licenses/mit-license.php
 
@@ -133,8 +135,8 @@ TYPOGRAPHY
 -------------------------------------------------------------- */
 /* Default fonts and colors. */
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
-  line-height: 1.5;
-  font-family: "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 20px;
+  font-family: Helvetica, Arial, sans-serif;
   color: black;
   font-size: 14px; }
 
@@ -145,23 +147,28 @@ HEADINGS
 -------------------------------------------------------------- */
 h1, h2, h3, h4, h5 {
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: #333333; }
 
 h1 {
-  font-size: 22px; }
+  font-size: 20px;
+  line-height: 20px; }
 
 h2 {
-  font-size: 20px; }
+  font-size: 20px;
+  line-height: 20px; }
 
 h3 {
-  font-size: 18px; }
+  font-size: 20px;
+  line-height: 20px; }
 
 h4 {
-  font-size: 16px; }
+  font-size: 20px;
+  line-height: 20px; }
 
 h5 {
-  font-size: 14px; }
+  font-size: 20px;
+  line-height: 20px; }
 
 /* --------------------------------------------------------------
 
@@ -169,10 +176,10 @@ PAGE ELEMENTS
 
 -------------------------------------------------------------- */
 p {
-  margin-bottom: 10px; }
+  margin-bottom: 20px; }
 
 ul, ol {
-  margin-bottom: 10px; }
+  margin-bottom: 20px; }
 
 ul {
   list-style: none; }
@@ -245,7 +252,8 @@ tt {
 
 q {
   font-style: italic;
-  font-weight: bold; }
+  font-weight: bold;
+  font-family: "Bookman Old Style", Bookman, "URW Bookman L", "Palatino Linotype", serif; }
 
 cite {
   display: block;
@@ -497,7 +505,7 @@ input[type="week"] {
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
-  font: 12px "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 12px Helvetica, Arial, sans-serif;
   margin: 0 0 20px 0;
   width: 100%;
   display: block;
@@ -552,7 +560,7 @@ textarea:-moz-placeholder {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666666), color-stop(1, black));
     border: #cccccc;
     color: #fff;
-    font: "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: Helvetica, Arial, sans-serif;
     padding: 15px 15px 17px;
     text-shadow: #000 0 0 1px; }
 
@@ -585,6 +593,9 @@ button[type=submit], input[type='submit'] {
 Main CSS
 
 -------------------------------------------------------------- */
+body {
+  background: url(../images/12_col.gif) repeat-y center -4px; }
+
 #container {
   width: 940px;
   margin: 0 auto;
