--- a/index.haml
+++ b/index.haml
@@ -62,7 +62,7 @@
         %p
           %a{:href => "http://gravityframework.com"} GravityFramework
          
-    %script{:src => "http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"}
+    %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"}
     %script{:src => "http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"}
     %script{:src => "http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"}
-    %script{:src => "js/application.js"}
+    %script{:src => "javascripts/application.js"}
