updates mixins and done some more changes

--- a/stylesheets/lib/_core.scss
+++ b/stylesheets/lib/_core.scss
@@ -5,4 +5,4 @@
 @import "helpers/_classes";
 @import "_grid";
 @import "helpers/_forms";
-@import "helpers/_buttons";
+@import "helpers/_media_queries";
