--- a/stylesheets/lib/_settings.scss
+++ b/stylesheets/lib/_settings.scss
@@ -2,8 +2,7 @@
 
 Built with Gravity
 http://Gravityframework.com
-If you love gravity, be sure to tell others about it
-Version 1.3 
+Version 1.3.1
 Developed by: Owain Lewis
 www.owainlewis.com
 License: MIT
@@ -11,22 +10,34 @@ http://www.opensource.org/licenses/mit-license.php
 
 -------------------------------------------------------------- */
 
-//Layout
+/*
+
+Grid Layout
+
+*/
 
 $width: 940px;
 $gutters: 20px;
 $columns: 12;
 $baseline: 20px;
 
-//Fonts
+/*
+
+Fonts
+
+*/
 
 $sans: Helvetica, Arial, sans-serif;
-$serif: 'Bookman Old Style',Bookman,'URW Bookman L','Palatino Linotype',serif;
-$mono: "Lucida Console", "Andale Mono", "monotype.com", "Bitstream Vera Sans Mono", monospace;
+$serif: Georgia, Times, serif;
+$mono: "Lucida Console", "Andale Mono", monospace;
 
 $font-size: 14px;
 
-//Website Colors
+/*
+
+Colors
+
+*/
 
 $background: #FFF;
 $text: #000;
@@ -34,7 +45,6 @@ $links: #1c7fc4;
 $borders:#CCC;
 $headings: #333;
 
-//Default Colors
 $white:#fff;
 $grey: #666;
 $black: #000;
