--- a/stylesheets/lib/helpers/_mixins.scss
+++ b/stylesheets/lib/helpers/_mixins.scss
@@ -29,11 +29,11 @@
 	box-shadow: $off-y $off-x $blur $color;
 }
 
-@mixin gradient($baseColor:#333, $toColor:#111) {
-	background-color: $baseColor;
-	background-image: -moz-linear-gradient(top, $baseColor, $toColor); /* FF3.6 */
-	background-image: -webkit-gradient(linear,left top,left bottom, color-stop(0, $baseColor),color-stop(1, $toColor)); /* Saf4+, Chrome */
-	background-image: linear-gradient(top,$baseColor, $toColor);
+@mixin gradient($from:#111, $to:#333) {
+	background: $from; /* for non-css3 browsers */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from($from), to($to)); /* for webkit browsers */
+	background: -moz-linear-gradient(top,  $from,  $to); /* for firefox 3.6+ */
 }
 
 /* This is a particularly useful mixin if you want to add slick CSS3 animations to elements */
@@ -44,14 +44,6 @@
 	transition: $property $duration $function;
 }
 
-@mixin transform($scale, $rotate, $trans-x, $trans-y, $skew-x, $skew-y) {
-	-moz-transform: scale($scale) rotate($rotate) translate($trans-x, $trans-y) skew(skew-x, skew-y);
-	-webkit-transform: scale($scale) rotate($rotate) translate($trans-x, $trans-y) skew(skew-x, skew-y);
-	-o-transform: scale($scale) rotate($rotate) translate($trans-x, $trans-y) skew(skew-x, skew-y);
-	-ms-transform: scale($scale) rotate($rotate) translate($trans-x, $trans-y) skew(skew-x, skew-y);
-	transform: scale($scale) rotate($rotate) translate($trans-x, $trans-y) skew(skew-x, skew-y);
-}
-
 @mixin scale($scale:1) {
 	-moz-transform: scale($scale);
 	-webkit-transform: scale($scale);
@@ -60,31 +52,21 @@
 	transform: scale($scale);
 }
 
-@mixin clearfix {
-	display: inline-block;
-	&:after {
-		content: ".";
-		display: block;
-		height: 0;
-		clear: both;
-		visibility: hidden;
-	}
-	* html & {
-		height: 1px
-	}
-
+/* Cross browser opacity mixin */
+@mixin opacity($value:0.8){
+	opacity:$value;
+	filter:alpha(opacity=$value*100);	
 }
 
-@mixin fontFace ($name) {
+@mixin fontFace ($name, $src:fonts) {
 	@font-face {
 		font-family: 'FontName';
-		src: url('../fonts/$name.eot');
-		src: url('../fonts/$name.eot?iefix') format('eot'),
-		url('../fonts/$name.woff') format('woff'),
-		url('../fonts/$name.ttf') format('truetype'),
-		url('../fonts/$name.svg#webfontZam02nTh') format('svg');
+		src: url('$src/$name.eot');
+		src: url('$src/$name.eot?iefix') format('eot'),
+		url('$src/$name.woff') format('woff'),
+		url('$src/$name.ttf') format('truetype'),
+		url('$src/$name.svg#webfontZam02nTh') format('svg');
 		font-weight: normal;
 		font-style: normal;
 	}
-
 }
