--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,14 +2,28 @@
 
 Built with Gravity
 http://Gravityframework.com
-If you love gravity, be sure to tell others about it
-Version 1.3 
+Version 1.3.1
 Developed by: Owain Lewis
 www.owainlewis.com
 License: MIT
 http://www.opensource.org/licenses/mit-license.php
 
 -------------------------------------------------------------- */
+/*
+
+Grid Layout
+
+*/
+/*
+
+Fonts
+
+*/
+/*
+
+Colors
+
+*/
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
@@ -99,6 +113,7 @@ button, input, select, textarea {
 /* Add rounded corners to all sides */
 /* Add rounded corners to certain sides */
 /* This is a particularly useful mixin if you want to add slick CSS3 animations to elements */
+/* Cross browser opacity mixin */
 /* --------------------------------------------------------------
 
 TABLES
@@ -146,7 +161,6 @@ HEADINGS
 
 -------------------------------------------------------------- */
 h1, h2, h3, h4, h5 {
-  font-weight: bold;
   margin-bottom: 20px;
   color: #333333; }
 
@@ -253,7 +267,7 @@ tt {
 q {
   font-style: italic;
   font-weight: bold;
-  font-family: "Bookman Old Style", Bookman, "URW Bookman L", "Palatino Linotype", serif; }
+  font-family: Georgia, Times, serif; }
 
 cite {
   display: block;
@@ -509,12 +523,14 @@ input[type="week"] {
   margin: 0 0 20px 0;
   width: 100%;
   display: block;
-  background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #fafafa, white);
-  /* FF3.6 */
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fafafa), color-stop(1, white));
-  /* Saf4+, Chrome */
-  background-image: linear-gradient(top, #fafafa, white);
+  background: #fafafa;
+  /* for non-css3 browsers */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to');
+  /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(white));
+  /* for webkit browsers */
+  background: -moz-linear-gradient(top, #fafafa, white);
+  /* for firefox 3.6+ */
   /* IE7 */
   *padding-top: 2px;
   *padding-bottom: 1px;
@@ -544,12 +560,6 @@ textarea:-moz-placeholder {
 
 /* Tweaks for Safari + Chrome. */
 @media (-webkit-min-device-pixel-ratio: 0) {
-  select {
-    background-image: url(../images/select_arrow.gif);
-    background-repeat: no-repeat;
-    background-position: right center;
-    padding-right: 20px; }
-
   select[size],
   select[multiple] {
     background-image: none;
@@ -579,15 +589,29 @@ button[type=submit], input[type='submit'] {
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
-  background-color: #333333;
-  background-image: -moz-linear-gradient(top, #333333, #111111);
-  /* FF3.6 */
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #333333), color-stop(1, #111111));
-  /* Saf4+, Chrome */
-  background-image: linear-gradient(top, #333333, #111111);
+  background: #111111;
+  /* for non-css3 browsers */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to');
+  /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#111111), to(#333333));
+  /* for webkit browsers */
+  background: -moz-linear-gradient(top, #111111, #333333);
+  /* for firefox 3.6+ */
   border: 0;
   color: #FFF; }
 
+/* --------------------------------------------------------------
+
+MEDIA QUERIES
+
+-------------------------------------------------------------- */
+/* iPad Portrait/Browser */
+/* Mobile/Browser */
+/* Mobile Landscape/Browser */
+/* Anything smaller than standard 960 */
+/* iPad Portrait Only */
+/* Mobile Only */
+/* Mobile Landscape Only */
 /* --------------------------------------------------------------
 
 Main CSS
