--- a/stylesheets/lib/helpers/_mixins.scss
+++ b/stylesheets/lib/helpers/_mixins.scss
@@ -52,6 +52,17 @@
 	transform: scale($scale);
 }
 
+@mixin rotate($angle) {
+	-moz-transform: rotate($angle);
+	-webkit-transform: rotate($angle);
+	-o-transform: rotate($angle);
+	-ms-transform: rotate($angle);
+	transform: rotate($angle);
+	filter:  progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=#{cos($angle)}, M12=-#{sin($angle)}, M21=#{sin($angle)}, M22=#{cos($angle)});
+	-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=#{cos($angle)}, M12=-#{sin($angle)}, M21=#{sin($angle)}, M22=#{cos($angle)})";
+  zoom: 1;
+}
+
 /* Cross browser opacity mixin */
 @mixin opacity($value:0.8){
 	opacity:$value;
