changed the markdown

--- a/index.haml
+++ b/index.haml
@@ -2,12 +2,12 @@
 %html{:class => "no-js", :lang => "en"}
   %head
     %meta{:charset => "utf-8"}/
-    %title="MySite"
+    %title="Gravity Framework"
     %meta{:content => "", :name => "description"}/
     %meta{:content => "", :name => "author"}/
   
-    <!-- [if (lt IE 9)]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  
+    %script{:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
+
     <!-- Mobile Specific Meta Tags -->
     %meta{:name => "viewport", :content => "width=device-width; initial-scale=1.0; maximum-scale=1.0;"}
   
