--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -3,7 +3,7 @@
 
 /* --------------------------------------------------------------
 
-Main CSS
+Main CSS. For demo purposes only. You can delete this.
 
 -------------------------------------------------------------- */
 
