--- a/index.haml
+++ b/index.haml
@@ -13,7 +13,7 @@
     <!-- CSS -->
     <!-- Google Fonts API -->
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans:400,700", :rel => "stylesheet", :type => "text/css"}
-    %link{:rel => "stylesheet", :href => "stylesheets/style.css", :type => "text/css"}
+    %link{:rel => "stylesheet", :href => "css/stylesheets/style.css", :type => "text/css"}
 
   %body
     %div#container
