made siginificant progress and updates

--- a/views/index.slim
+++ b/views/index.slim
@@ -6,20 +6,8 @@ html class="no-js" lang="en"
     meta content="" name="description"
     meta content="" name="author"
     script src="http://html5shim.googlecode.com/svn/trunk/html5.js"
-    
-    | <!-- Mobile Specific Meta Tags -->
     meta name="viewport" content="width=(device-width; initial-scale=1.0;)maximum-scale=1.0;"
-  
-    | <!-- CSS -->
     link rel="stylesheet" href="public/stylesheets/css/style.css" type="text/css"
 
   body
-    #container
-	  h1 Gravityframework
-	  p Gravity is a framework for building better websites.
-	  p Get started by running "rake sass" at the terminal to start watching the sass files
-	
-    script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"
-    script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"
-    script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"
-    script src="public/javascripts/application.js"
+    .container
