--- a/views/all.haml
+++ b/views/all.haml
@@ -17,16 +17,15 @@
         %h3 Paragraphs
         .span-4
           %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          %p 
-            %strong Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      
           %pre
             %code This is a code block
 
         .span-4
           %p
-          %b Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            %b Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           %p
-          %a This is a line
+            %a This is a line
           %p
             %i Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
@@ -43,6 +42,17 @@
           %del Strike through
         .span-8
           %blockquote Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  styles. 
+
+      %hr
+      %section
+        .span-4
+          %img{:src => "http://placekitten.com/300/240"}
+
+        .span-4
+          %img{:src => "http://placekitten.com/300/200"}
+
+        .span-4
+          %img{:src => "http://placekitten.com/300/230"}
 
       %hr		
       %section
