--- a/views/index.haml
+++ b/views/index.haml
@@ -1,14 +1,21 @@
 !!!5
-%html(class="no-js" lang="en")
+%html{:class => "no-js", :lang => "en"}
   %head
-    %meta(charset="utf-8")
-    %title="Project Title"
-    %meta(content="" name="description")
-    %meta(content="" name="author")
-    %script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
-    %meta(name="viewport" content="width=(device-width; initial-scale=1.0;)maximum-scale=1.0;")
-    %link(rel="stylesheet" href="public/stylesheets/css/style.css" type="text/css")
+    %meta{:charset => "utf-8"}
+    %title="My Project"
+    %meta{:content => "", :name => "description"}
+    %meta{:content => "", :name => "author"}
+    %script{:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
+    %meta{:name => "viewport", :content => ""}
+    %link{:rel => "stylesheet", :href => "public/stylesheets/css/style.css", :type => "text/css"}
 
   %body
     .container
       %h1.center Gravity CSS
+      %p.center Run rake gravity:watch in the terminal to start watching your SASS.
+
+    %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"}
+    %script{:src => "http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.1.7/underscore-min.js"}
+    %script{:src => "http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.5.3/backbone-min.js"}
+
+
