--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -3,10 +3,19 @@
 .container {
   width: $width;
   margin: 0 auto;
-  padding: 20px 0;
+  padding:20px;
   overflow: hidden; }
 
 section{@include block}
 
+/* ============================== */
+/* ! Layout for desktop version   */
+/* ============================== */
+
+	body {
+		background:#fafafa;
+	}
+	
 //Media Queries
 @import "lib/helpers/media_queries";
+
