updated the markdown

--- a/views/all_elements.haml
+++ b/views/all_elements.haml
@@ -11,7 +11,7 @@
 
   %body
     .container
-      %h1.center Gravity CSS
+      %h1.center Gravity CSS Test
       %hr
       %section
         %h3 Paragraphs
