--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -1,78 +1,84 @@
 /* --------------------------------------------------------------
  * Gravity CSS
- * Version 0.1
+ * Version 1
  * Developed by: Owain Lewis
  * www.owainlewis.com
  * License: MIT
  * http://www.opensource.org/licenses/mit-license.php
  *-------------------------------------------------------------- */
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small,
+strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label,
+legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas,
+details, figcaption, figure, footer, header, hgroup, menu, nav, section,
+summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
+  outline: 0;
   font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+  background: transparent; }
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-  width: 100%; }
+body {
+  line-height: 1; }
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav,
+section {
+  display: block; }
+
+nav ul {
+  list-style: none; }
 
 blockquote, q {
   quotes: none; }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
   content: none; }
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
+
+/* change colours to suit your needs */
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none; }
+
+/* change colours to suit your needs */
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold; }
+
+del {
+  text-decoration: line-through; }
+
+abbr[title], dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help; }
 
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+/* change border colour to suit your needs */
 hr {
   display: block;
   height: 1px;
   border: 0;
   border-top: 1px solid #cccccc;
-  margin: 20px 0 19px 0;
+  margin: 1em 0;
   padding: 0; }
 
 input, select {
   vertical-align: middle; }
-
-textarea {
-  overflow: auto; }
-
-.ie6 legend, .ie7 legend {
-  margin-left: -7px; }
-
-input[wtype="radio"] {
-  vertical-align: text-bottom; }
-
-input[type="checkbox"] {
-  vertical-align: bottom; }
-
-.ie7 input[type="checkbox"] {
-  vertical-align: baseline; }
-
-.ie6 input {
-  vertical-align: text-bottom; }
-
-label, input[type="button"], input[type="submit"], input[type="image"], button {
-  cursor: pointer; }
-
-button, input, select, textarea {
-  margin: 0; }
 
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
   line-height: 20px;
@@ -299,6 +305,11 @@ h6 {
 .last {
   margin-right: 0 !important; }
 
+/* 
+
+The files below are helpers that can be removed if not required
+
+*/
 ::-moz-focus-inner {
   border: 0;
   padding: 0; }
@@ -624,6 +635,39 @@ caption {
 .invisible {
   visibility: hidden; }
 
+/* Success, error & notice boxes for messages and errors. */
+div.error, div.notice, div.success, #flash_failure, #flash_success, #flash_notice {
+  border: 1px solid #ddd;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  margin-bottom: 12px;
+  padding: 10px; }
+
+div.error, #flash_failure {
+  background: #FBE3E4;
+  border-color: #FBC2C4;
+  color: #D12F19; }
+
+div.error a, #flash_failure a {
+  color: #D12F19; }
+
+div.notice, #flash_notice {
+  background: #FFF6BF;
+  border-color: #FFD324;
+  color: #817134; }
+
+div.notice a, #flash_notice a {
+  color: #817134; }
+
+div.success, #flash_success {
+  background: #E6EFC2;
+  border-color: #C6D880;
+  color: #529214; }
+
+div.success a, #flash_success a {
+  color: #529214; }
+
 .container {
   width: 940px;
   margin: 0 auto;
@@ -636,7 +680,7 @@ section {
   overflow: hidden; }
 
 /* ============================== */
-/* ! Layout for desktop version   */
+/* ! Layout for desktop version */
 /* ============================== */
 body {
   background: #fafafa; }
