--- a/public/stylesheets/scss/lib/typography/_headings.scss
+++ b/public/stylesheets/scss/lib/typography/_headings.scss
@@ -1,28 +1,35 @@
 h1,h2,h3,h4,h5,h6 {
-  margin-bottom: $baseline;
-  color: $grayDark;
-  font-weight: bold; }
+	margin-bottom: $baseline;
+	color: $grayDark;
+	font-weight: bold;
+}
 
 h1 {
-  font-size:28px;
-  line-height: $baseline * 2; }
+	font-size: 28px;
+	line-height: $baseline * 2;
+}
 
 h2 {
-  font-size:24px;
-  line-height: $baseline; }
+	font-size: 24px;
+	line-height: $baseline;
+}
 
 h3 {
-  font-size:20px;
-  line-height: $baseline; }
+	font-size: 20px;
+	line-height: $baseline;
+}
 
 h4 {
-  font-size:16px;
-  line-height: $baseline; }
+	font-size: 16px;
+	line-height: $baseline;
+}
 
 h5 {
-  font-size:14px;
-  line-height: $baseline; }
+	font-size: 14px;
+	line-height: $baseline;
+}
 
 h6 {
-  font-size:14px;
-  line-height: $baseline; }
+	font-size: 14px;
+	line-height: $baseline;
+}
