--- a/views/all_elements.haml
+++ b/views/all_elements.haml
@@ -12,7 +12,6 @@
   %body
     .container
       %h1.center Gravity CSS Test
-      %hr
       %section
         %h3 Paragraphs
         .span-4
@@ -33,28 +32,31 @@
           %p 
             %small Small text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
           %q Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      %hr		
+	
       %section
         .span-4
           %h1 Misc Elements
           %p 
-          %del Strike through
+            %del Strike through
         .span-8
           %blockquote Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  styles. 
 
-      %hr
+      %section
+
+        %div.error Error message
+        %div.notice Notice
+        %div.success Success message
+
       %section
         .span-4
-          %img{:src => "http://placekitten.com/300/240"}
+          %img{:src => "http://placehold.it/300x250"}
 
         .span-4
-          %img{:src => "http://placekitten.com/300/200"}
+          %img{:src => "http://placehold.it/300x250"}
 
         .span-4
-          %img{:src => "http://placekitten.com/300/230"}
-
-      %hr		
+          %img{:src => "http://placehold.it/300x250"}
+		
       %section
         %h3 Headings
         .span-4
@@ -84,8 +86,7 @@
           %hr
           %h6 Heading 6
           %hr
- 
-      %hr		
+ 		
       %section
         .span-4
           %h3 Forms
@@ -130,8 +131,7 @@
 
           %label Textarea
           %textarea
-
-      %hr	
+	
       %section
         %h3 Lists
         .span-3
@@ -163,7 +163,7 @@
           %dl
             %dt Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit
             %dd Item 1
-            %dl Some title
+            %dd Some title
             %dd Item 2
             %dd Item 3
 
@@ -176,8 +176,7 @@
               %ul
                 %li Sub item in list
                 %li Another sub item
-  
-      %hr	
+  	
       %section
         %h3 Tabular Data
         .span-12
@@ -188,22 +187,22 @@
                 %th Address
                 %th Email
               %tr
-                %td Owain
-                %td My Town
-                %td owain@owainlewis.com
+                %td Lorem ipsum
+                %td Lorem ipsum
+                %td Lorem ipsum
               %tr
-                %td Lorem
-                %td Ipsume
-                %td Dolor
+                %td Lorem ipsum
+                %td Lorem ipsum
+                %td Lorem ipsum
 
               %tr
-                %td Owain
-                %td Somewhere Park
-                %td owain@owainlewis.com
+                %td Lorem ipsum
+                %td Lorem ipsum
+                %td Lorem ipsum
               %tr
-                %td Lorem
-                %td Ipsume
-                %td Dolor
+                %td Lorem ipsum
+                %td Lorem ipsum
+                %td Lorem ipsum
 
       %section
         %h3 Buttons
