--- a/public/stylesheets/scss/lib/_settings.scss
+++ b/public/stylesheets/scss/lib/_settings.scss
@@ -3,7 +3,7 @@ $gutters: 20px;
 $columns: 12;
 $baseline: 20px;
 
-$sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$sans: Helvetica, Arial, sans-serif;
 $serif: "Georgia", Times New Roman, Times, sans-serif;
 $mono: "Monaco", Courier New, monospace;
 $font-size: 14px;
