--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -82,7 +82,7 @@ input, select {
 
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
   line-height: 20px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: gray;
   font-size: 14px; }
 
@@ -96,7 +96,8 @@ ol {
     margin-bottom: 0; }
 
 ul {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  list-style: disc; }
   ul li {
     margin-bottom: 5px;
     margin-left: 14px; }
@@ -305,11 +306,6 @@ h6 {
 .last {
   margin-right: 0 !important; }
 
-/* 
-
-The files below are helpers that can be removed if not required
-
-*/
 ::-moz-focus-inner {
   border: 0;
   padding: 0; }
@@ -366,11 +362,11 @@ input[type="radio"],
 input[type="checkbox"] {
   position: relative;
   vertical-align: top;
-  top: 3px;
+  top: 1px;
   /* IE8, IE9, IE10 */
   top: 0 \0;
   /* IE7 */
-  *top: -3px;
+  *top: -1px;
   margin-right: 5px; }
 
 /* iPad */
@@ -424,7 +420,7 @@ input[type="week"] {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
-  font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 12px Helvetica, Arial, sans-serif;
   margin: 0 0 18px 0;
   width: 100%;
   display: block;
@@ -458,7 +454,7 @@ textarea:-moz-placeholder {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666666), color-stop(1, black));
     border: #cccccc;
     color: white;
-    font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: Helvetica, Arial, sans-serif;
     padding: 15px 15px 17px;
     text-shadow: black 0 0 1px; }
 
@@ -503,16 +499,19 @@ button[type=submit], input[type='submit'] {
 
 table {
   margin-bottom: 20px;
-  width: 100%; }
+  width: 100%;
+  border: 1px solid #ddd; }
 
 th {
   font-weight: bold;
   text-align: left;
-  border-bottom: 4px solid gray; }
+  border-bottom: 2px solid gray;
+  border-right: 1px solid #ddd; }
 
 td {
   padding: 10px;
-  border-bottom: 1px solid #ddd; }
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd; }
 
 th {
   padding: 10px 10px 6px 10px; }
@@ -682,12 +681,3 @@ section {
 /* ============================== */
 /* ! Layout for desktop version */
 /* ============================== */
-body {
-  background: #fafafa; }
-
-/* ============================= */
-/* ! Layout for mobile version */
-/* ============================= */
-/* ========================================== */
-/* ! Provide higher res assets for iPhone 4 */
-/* ========================================== */
