--- a/public/stylesheets/scss/lib/helpers/_tables.scss
+++ b/public/stylesheets/scss/lib/helpers/_tables.scss
@@ -1,17 +1,20 @@
 table {
 	margin-bottom: $baseline;
 	width: 100%;
+	border:1px solid #ddd;
 }
 
 th {
 	font-weight: bold;
 	text-align: left;
-	border-bottom: 4px solid $gray;
+	border-bottom: 2px solid $gray;
+	border-right:1px solid #ddd;
 }
 
 td {
 	padding: 10px;
 	border-bottom: 1px solid #ddd;
+	border-right:1px solid #ddd;
 }
 
 th {
