--- a/public/stylesheets/scss/lib/mixins/_mixins.scss
+++ b/public/stylesheets/scss/lib/mixins/_mixins.scss
@@ -1,3 +1,5 @@
+//CSS3 
+
 @import "css3/background-clip";
 @import "css3/border-radius";
 @import "css3/box-shadow";
@@ -13,15 +15,15 @@
 @import "css3/transition";
 
 @mixin block{
-	clear:both;margin:$baseline 0;overflow:hidden;
+  clear:both;margin:$baseline 0;overflow:hidden;
 }
 
 // Converts pixels to em
 @mixin px-to-em($px, $base: 16){
-	font-size: #{$px/$base}em;/*16 x !ems = !pixels*/
+  font-size: #{$px/$base}em;/*16 x !ems = !pixels*/
 }
 
 // Converts pixels to rem
 @mixin px-to-rem($px, $base: 16){
-	font-size: #{$px/$base}rem;
+  font-size: #{$px/$base}rem;
 }
