--- a/public/stylesheets/scss/lib/helpers/_classes.scss
+++ b/public/stylesheets/scss/lib/helpers/_classes.scss
@@ -1,3 +1,9 @@
+/*
+
+Avoid misc classes in markup wherever possible. These are mainly for mocking.
+
+*/
+
 .wrap {
   width: $width;
   margin: 0 auto; }
