--- a/views/all_elements.haml
+++ b/views/all_elements.haml
@@ -120,6 +120,8 @@
               %option Second
               %option Third
 
+            %input{:type => "submit"}
+
           %h3 Stacked Checkboxes
           %ul.input-list
             %li
