--- a/public/stylesheets/scss/lib/mixins/css3/_border-radius.scss
+++ b/public/stylesheets/scss/lib/mixins/css3/_border-radius.scss
@@ -1,4 +1,7 @@
-@mixin border-radius($radius: 5px) {
+@mixin border-radius ($radius) {
   -webkit-border-radius: $radius;
-  -moz-border-radius: $radius;
-  border-radius: $radius; }
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+       -o-border-radius: $radius;
+          border-radius: $radius;
+}
