--- a/public/stylesheets/scss/lib/_settings.scss
+++ b/public/stylesheets/scss/lib/_settings.scss
@@ -3,9 +3,9 @@ $gutters: 20px;
 $columns: 12;
 $baseline: 20px;
 
-$sans: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans serif;
-$serif: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif," "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;;
-$mono: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;;
+$sans: "Myriad Pro", Myriad, Helvetica, Arial, sans serif;
+$serif: Georgia, serif;
+$mono: "Andale Mono WT", Monaco, "Courier New", Courier, monospace;
 
 $font-size: 14px;
 $links: #0069d6;
