--- a/public/stylesheets/scss/lib/mixins/css3/_columns.scss
+++ b/public/stylesheets/scss/lib/mixins/css3/_columns.scss
@@ -1,7 +1,8 @@
 @mixin content-columns($columnCount, $columnGap: 20px) {
-  -webkit-column-count: $columnCount;
-  -moz-column-count: $columnCount;
-  column-count: $columnCount;
-  -webkit-column-gap: $columnGap;
-  -moz-column-gap: $columnGap;
-  column-gap: $columnGap; }
+	-webkit-column-count: $columnCount;
+	-moz-column-count: $columnCount;
+	column-count: $columnCount;
+	-webkit-column-gap: $columnGap;
+	-moz-column-gap: $columnGap;
+	column-gap: $columnGap;
+}
